@@ -7,10 +7,13 @@ dyncall:
   o introduced dcArgF and dcVArgF for flexible/convenient argument binding (works
     like dcCallF/dcVCallF without the function call)
   o added -fPIC by default for FreeBSD
-  o ppc32 linux syscall support
+  o PPC32 linux syscall support
 dyncallback:
   o ARM64 support
   o PPC64 support (thanks Masanori)
+  o PPC32 System V support (Linux)
+  o fix for PPC32 Darwin/OS X
+  o more intuitive specification of callback return type
 doc:
   o added ARM64 support info and calling convention documentation
   o added PPC64 support info
